# pokemontui

./: ARCHITECTURE.md  ARCHITECTURE_REDUNDANCY_AUDIT.md  ARCHITECTURE_REDUNDANCY_AUDIT_V2.md  ARCHITECTURE_REDUNDANCY_AUDIT_V3_TUI_READINESS.md  Cargo.toml  README.md  fix_build.patch  pokedex_system.patch
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/bootstrap/: config.rs  container.rs  logging.rs  mod.rs
crates/app/src/commands/: battle.rs  mod.rs  pokedex.rs  spawn.rs
crates/app/src/container/: command_registry.rs  factory.rs  mod.rs  registry.rs  usecases.rs
crates/app/src/lifecycle/: app.rs  mod.rs  shutdown.rs
crates/app/src/router/: command.rs  context.rs  error.rs  mod.rs  registry.rs  router.rs
crates/app/src/runtime/: cli_runtime.rs  executor.rs  mod.rs  scheduler.rs
crates/app/src/services/: mod.rs  rng_provider.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/api/: pokeapi_client.rs
crates/engine/src/battle/: action.rs  engine.rs  mod.rs  resolver.rs  state.rs
crates/engine/src/core/: mod.rs  spawn_controller.rs
crates/engine/src/dex/: mod.rs
crates/engine/src/factory/: error.rs  mod.rs  pokemon_factory.rs  species_registry.rs
crates/engine/src/pokedex/: mod.rs  model.rs  paginator.rs  pokedex_index.rs  pokemon_registry.rs  service.rs
crates/engine/src/probability/: mod.rs
crates/engine/src/render/: mod.rs  pokeget_render.rs
crates/engine/src/rng/: mod.rs
crates/engine/src/spawn/: context.rs  distribution.rs  encounter_table.rs  (+15 more)
crates/engine/tests/: battle_sim.rs  pokemon_factory.rs  probability_system.rs  spawn_distribution.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs  random.rs
crates/infrastructure/tests/: rng_deterministic.rs
(+103 files in other folders)
