[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
contracts = { path = "../contracts" }
domain = { path = "../domain" }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.layer]
name = "engine"
