[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
contracts = { path = "../contracts" }
engine = { path = "../engine" }
rand = "0.8"
rayon = "1.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
serde = "1"


[package.metadata.layer]
name = "infrastructure"