[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
contracts = { path = "../contracts" }
rand = "0.8"
rayon = "1.8"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde_json = "1"
serde = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["fs"] }
anyhow = "1"

[dev-dependencies]
engine = { path = "../engine" }

[package.metadata.layer]
name = "infrastructure"
